code/new.txt
temp.java:12: error: ';' expected
  		for(int i = 0;i<array.size()i++){
  		                            ^
1 error
